# mexc

./: Cargo.toml  Dockerfile  railway.toml
src/: config.rs  main.rs
src/cmc/: client.rs
src/mexc/: mod.rs  rest.rs  types.rs  websocket.rs
src/monitor/: announcement.rs  deposit.rs  mod.rs  price.rs  processor.rs  symbol.rs
src/telegram/: mod.rs
